--- a/app/src/main/res/drawable/border_logo.xml
+++ b/app/src/main/res/drawable/border_logo.xml
@@ -2,9 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <solid android:color="#9bced1"/>
-        <corners android:radius="10dp"/>
-        <stroke android:width="4dp" android:color="#1DB7AE"/>
+        <corners android:radius="100dp"/>
+        <stroke android:width="2dp" android:color="#000000"/>
     </shape>
 </item>
 </selector>
