--- a/app/src/main/res/layout/activity_control_panel.xml
+++ b/app/src/main/res/layout/activity_control_panel.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e5fcfb"
     tools:context=".controlPanel">
 
 
@@ -53,9 +52,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="32dp"
                         android:layout_marginTop="8dp"
-                        android:text="Hello"
+                        android:text="Jafar Ahmed"
                         android:textColor="#ffffff"
-                        android:textSize="18sp"
+                        android:textSize="25sp"
+                        android:textStyle="bold"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/imageView5" />
 
@@ -63,9 +63,9 @@
                         android:id="@+id/textView7"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Bits"
+                        android:text="Level 5"
                         android:textColor="#fedd06"
-                        android:textSize="31sp"
+                        android:textSize="20sp"
                         android:textStyle="bold"
 
                         app:layout_constraintBottom_toBottomOf="@+id/imageView5"
@@ -96,23 +96,20 @@
 
                         <ImageView
                             android:id="@+id/imageViewVideoCall"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-
+                            android:layout_width="wrap_content"
+                            android:layout_height="50dp"
                             android:layout_margin="8dp"
-                            app:srcCompat="@drawable/video_call" />
+                            app:srcCompat="@drawable/certificate" />
 
                         <TextView
                             android:id="@+id/textView9"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="4dp"
-                            android:text="Video Call"
+                            android:text="Certificates"
                             android:textAlignment="center"
-                            android:textColor="#4c6d99"
+                            android:textColor="#000000"
                             android:textStyle="bold|italic"
-
-
                             />
                     </LinearLayout>
 
@@ -126,20 +123,20 @@
 
                         <ImageView
                             android:id="@+id/imageViewNoti"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:layout_height="50dp"
 
                             android:layout_margin="8dp"
-                            app:srcCompat="@drawable/notification" />
+                            app:srcCompat="@drawable/discount" />
 
                         <TextView
                             android:id="@+id/textViewNoti"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="4dp"
-                            android:text="Notification"
+                            android:text="Discounts"
                             android:textAlignment="center"
-                            android:textColor="#4c6d99"
+                            android:textColor="#000000"
                             android:textStyle="bold|italic"
 
 
@@ -156,20 +153,20 @@
 
                         <ImageView
                             android:id="@+id/imageViewVoiceCall"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:layout_height="50dp"
 
                             android:layout_margin="8dp"
-                            app:srcCompat="@drawable/voice_call" />
+                            app:srcCompat="@drawable/roadmap" />
 
                         <TextView
                             android:id="@+id/textViewVoiceCall"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="4dp"
-                            android:text="Voice Call"
+                            android:text="Roadmap"
                             android:textAlignment="center"
-                            android:textColor="#4c6d99"
+                            android:textColor="#000000"
                             android:textStyle="bold|italic"
 
 
@@ -182,6 +179,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="170dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
                 android:background="@drawable/green_banner_background"
@@ -215,7 +213,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="16dp"
-                    android:text="Until"
+                    android:text="Event"
                     android:textColor="#ffffff"
                     android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -227,7 +225,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:scrollbarSize="18sp"
-                    android:text="20 March - 30 May"
+                    android:text="13-14 October"
                     android:textColor="#ffffff"
                     app:layout_constraintStart_toStartOf="@+id/textView10"
                     app:layout_constraintTop_toBottomOf="@+id/textView10" />
@@ -236,10 +234,11 @@
                     android:id="@+id/textView12"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="40%"
+                    android:text="IT-LIVE"
                     android:textColor="#fedd06"
-                    android:textSize="40sp"
+                    android:textSize="30sp"
                     android:textStyle="bold"
+                    android:layout_marginTop="10dp"
                     app:layout_constraintStart_toStartOf="@+id/textView11"
                     app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
@@ -248,7 +247,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
-                    android:text="Discount"
+                    android:text="Registration"
                     android:textColor="#ffffff"
                     android:textSize="18sp"
 
@@ -332,7 +331,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="4dp"
-                            android:text="Maps"
+                            android:text="Courses"
                             android:textAlignment="center"
                             android:textColor="#2e3d6d"
                             android:textStyle="bold"
@@ -368,7 +367,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="4dp"
-                            android:text="Chat"
+                            android:text="Support"
                             android:textAlignment="center"
                             android:textColor="#2e3d6d"
                             android:textStyle="bold"
@@ -404,7 +403,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="4dp"
-                            android:text="Report"
+                            android:text="Contest"
                             android:textAlignment="center"
                             android:textColor="#2e3d6d"
                             android:textStyle="bold"
@@ -564,13 +563,6 @@
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
-
-            <Button
-                android:id="@+id/button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="show"
-                android:text="Button" />
 
         </LinearLayout>
     </ScrollView>
