--- a/app/src/main/res/layout/activity_view_page.xml
+++ b/app/src/main/res/layout/activity_view_page.xml
@@ -21,20 +21,21 @@
 
                 <ImageView
                     android:id="@+id/imageView6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="32dp"
+                    android:background="@drawable/border_logo"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/profile" />
+                    app:srcCompat="@drawable/bits_logo" />
 
                 <TextView
                     android:id="@+id/textView8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
-                    android:text="ًWelcome back"
+                    android:text=" Bits Academy "
                     android:textColor="#000000"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -43,16 +44,18 @@
                     app:layout_constraintTop_toTopOf="@+id/imageView6" />
 
                 <ImageView
-                    android:id="@+id/imageView9"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/imageViewProfile"
+                    android:layout_width="25dp"
+                    android:layout_height="35dp"
+                    android:layout_marginStart="114dp"
+                    android:layout_marginEnd="32dp"
+                    android:onClick="show_profile"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="32dp"
-                    app:layout_constraintTop_toTopOf="@+id/imageView6"
-                    app:srcCompat="@drawable/bellnoti"
 
-                    />
+                    app:layout_constraintStart_toEndOf="@+id/textView8"
+                    app:layout_constraintTop_toTopOf="@+id/imageView6"
+                    app:srcCompat="@drawable/user" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <LinearLayout
@@ -76,20 +79,20 @@
 
                         <ImageView
                             android:id="@+id/imageViewHotel"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="60dp"
+                            android:layout_height="50dp"
                             android:layout_marginEnd="8dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:srcCompat="@drawable/cat_1" />
+                            app:srcCompat="@drawable/course" />
 
                         <TextView
                             android:id="@+id/textViewHotel"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
-                            android:text="Hotel"
+                            android:text="Resumption"
                             android:textColor="#000000"
                             android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -107,20 +110,20 @@
 
                         <ImageView
                             android:id="@+id/imageViewHome"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="60dp"
+                            android:layout_height="50dp"
                             android:layout_marginEnd="8dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:srcCompat="@drawable/cat_2" />
+                            app:srcCompat="@drawable/offer" />
 
                         <TextView
                             android:id="@+id/textViewHome"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
-                            android:text="Home"
+                            android:text="Offers"
                             android:textColor="#000000"
                             android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -146,20 +149,20 @@
 
                         <ImageView
                             android:id="@+id/imageView10"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="60dp"
+                            android:layout_height="50dp"
                             android:layout_marginEnd="8dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:srcCompat="@drawable/cat_4" />
+                            app:srcCompat="@drawable/exam" />
 
                         <TextView
                             android:id="@+id/textViewHouse"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
-                            android:text="House"
+                            android:text="Exams "
                             android:textColor="#000000"
                             android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -178,20 +181,20 @@
 
                         <ImageView
                             android:id="@+id/imageViewH"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="60dp"
+                            android:layout_height="50dp"
                             android:layout_marginEnd="8dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:srcCompat="@drawable/cat_3" />
+                            app:srcCompat="@drawable/support" />
 
                         <TextView
                             android:id="@+id/textView15"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
-                            android:text="Hotel"
+                            android:text="Sponsors"
                             android:textColor="#000000"
                             android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -275,6 +278,50 @@
             </LinearLayout>
 
             <!-- Second Recycler View -->
+          <LinearLayout
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
+
+              <HorizontalScrollView
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="horizontal">
+                      
+                      <androidx.cardview.widget.CardView
+                          android:layout_width="150dp"
+                          android:layout_height="150dp"
+                          android:layout_margin="10dp"
+                          app:cardCornerRadius="20dp"
+                          app:cardElevation="10dp">
+                          
+                          <LinearLayout
+                              android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:orientation="vertical">
+
+                              <ImageView
+                                  android:layout_width="100dp"
+                                  android:layout_height="120dp"
+                                  android:src="@drawable/cat_1"/>
+
+                              <TextView
+                                  android:layout_width="wrap_content"
+                                  android:layout_height="wrap_content"
+                                  android:text="Title"/>
+                          </LinearLayout>
+
+                      </androidx.cardview.widget.CardView>
+
+                  </LinearLayout>
+
+              </HorizontalScrollView>
+
+          </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
