--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -28,22 +28,22 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView3">
 
         <TextView
-            android:id="@+id/textViewEmail"
+            android:id="@+id/textViewUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Email"
+            android:text="User Name"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/inputEmail"
+            android:id="@+id/inputUSer"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="12dp"
             android:background="@drawable/edittext_background"
             android:ems="10"
-            android:hint="Enter your Email"
+            android:hint="Enter your User Name"
             android:inputType="textPersonName"
             android:padding="12dp"
             android:textSize="18sp" />
