--- a/app/src/main/res/drawable/main_btn_bg.xml
+++ b/app/src/main/res/drawable/main_btn_bg.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <solid android:color="#9bced1"/>
+        <solid android:color="#1DB7AE"/>
         <corners android:radius="10dp"/>
     </shape>
 </item>
