--- a/app/src/main/res/layout/activity_control_panel.xml
+++ b/app/src/main/res/layout/activity_control_panel.xml
@@ -32,8 +32,10 @@
                     android:background="@drawable/top_background"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="1.0">
 
                     <ImageView
                         android:id="@+id/imageView5"
@@ -47,12 +49,11 @@
                         app:srcCompat="@drawable/profile" />
 
                     <TextView
-                        android:id="@+id/textView6"
+                        android:id="@+id/textViewUser"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="32dp"
-                        android:layout_marginTop="8dp"
-                        android:text="Jafar Ahmed"
+                        android:layout_marginTop="32dp"
                         android:textColor="#ffffff"
                         android:textSize="25sp"
                         android:textStyle="bold"
@@ -69,8 +70,8 @@
                         android:textStyle="bold"
 
                         app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-                        app:layout_constraintStart_toStartOf="@+id/textView6"
-                        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+                        app:layout_constraintStart_toStartOf="@+id/textViewUser"
+                        />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <LinearLayout
