--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -121,7 +121,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="16dp"
-            android:background="@drawable/green_button"
+            android:background="@drawable/main_btn_bg"
             android:onClick="sendDataSignup"
             android:text="Signup"
             android:textColor="#ffffff"
