--- a/app/src/main/res/layout/activity_view_page.xml
+++ b/app/src/main/res/layout/activity_view_page.xml
@@ -31,11 +31,10 @@
                     app:srcCompat="@drawable/bits_logo" />
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/tvUser"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
-                    android:text="Bits Academy"
                     android:textColor="#000000"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -48,7 +47,6 @@
                     android:layout_width="40dp"
                     android:layout_height="35dp"
                     android:layout_marginEnd="32dp"
-                    android:onClick="show_profile"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/imageView6"
