--- a/app/src/main/res/drawable/bg_items_details.xml
+++ b/app/src/main/res/drawable/bg_items_details.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <corners android:radius="10dp"/>
-        <solid android:color="#FEAF1C"/>
+        <corners android:radius="15dp"/>
+        <stroke android:width="2dp" android:color="#000000"/>
     </shape>
 </item>
 </selector>
