--- a/app/src/main/res/layout/activity_view_page.xml
+++ b/app/src/main/res/layout/activity_view_page.xml
@@ -537,6 +537,7 @@
 
                         <!-- Start Card Two -->
                         <androidx.cardview.widget.CardView
+                            android:id="@+id/Card_new_2"
                             android:layout_width="200dp"
                             android:layout_height="150dp"
                             android:layout_margin="10dp"
@@ -566,10 +567,8 @@
                         <!-- End Card Two -->
 
                         <!-- Start Card Three -->
-                        <!-- End Card Three -->
-
-                        <!-- Start Card Four -->
                         <androidx.cardview.widget.CardView
+                            android:id="@+id/Card_new_3"
                             android:layout_width="200dp"
                             android:layout_height="150dp"
                             android:layout_margin="10dp"
@@ -596,8 +595,11 @@
                             </LinearLayout>
 
                         </androidx.cardview.widget.CardView>
+                        <!-- End Card Three -->
 
+                        <!-- Start Card Four-->
                         <androidx.cardview.widget.CardView
+                            android:id="@+id/Card_new_4"
                             android:layout_width="200dp"
                             android:layout_height="150dp"
                             android:layout_margin="10dp"
@@ -628,6 +630,7 @@
 
                         <!-- Start Card Five -->
                         <androidx.cardview.widget.CardView
+                            android:id="@+id/Card_new_5"
                             android:layout_width="200dp"
                             android:layout_height="150dp"
                             android:layout_margin="10dp"
