--- a/app/src/main/res/layout/activity_view_page.xml
+++ b/app/src/main/res/layout/activity_view_page.xml
@@ -235,13 +235,16 @@
 
                 <HorizontalScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:layout_marginStart="10dp">
+
+                        >
                         <!-- Start Card One -->
                         <androidx.cardview.widget.CardView
                             android:layout_width="155dp"
